--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="about">
             <img class="pic" src="media/Matt.jpg"> 
             <p class="bio">
-            Welcome to my portfolio! Here you will find all of my work and skills. Alot of the work you will see will have a large variety between them. The reasoning behind that is because I thoroughly enjoy learning new things and experimenting with my ideas by creating projects. My skils aren't much at the moment, but I am always learning more and imporving my skill set. 
+            Welcome to my portfolio! Here you will find all of my work and skills. Alot of the work you will see will have a large variety between them. The reasoning behind that is because I thoroughly enjoy learning new things and experimenting with my ideas by creating projects. My skills aren't much at the moment, but I am always learning more and imporving my skill set. 
             </p>
         </div>
         <hr class="hrB">
@@ -42,6 +42,15 @@
             <h3 class="workTitle"><i>More to come...</i></h3>
             <img src="media/kisspng-stock-photography-royalty-free-coming-soon-5ab83d4e5f3889.57896897152202375839.jpg" style="width: 30vw; height: 15vh">
             <p class="workBio">More to come in the future...</p>
+        </div>
+        <hr class="hrB">
+        <div class="skillset"> 
+            <h3 style="text-align: center; font-family: 'Patua One', cursive"><em>Skills</em></h3>
+            <div class="skillsGrid">
+                <div class="HTML"><img src="media/html-5-logo-png-transparent.png" style="width: 80px; height: 90px"></div>
+                <div class="CSS"><img src="media/css-3-logo-png-transparent.png" style="width: 80px; height: 90px"></div>
+                <div class="JS"><img src="media/kisspng-javascript-logo-html-comment-blog-5ae63c23139110.5436874015250381150802.png" style="width: 80px; height: 90px;"></div>
+            </div>
         </div>
     </div>
     </body>
